# sap-sp-automation

./: .gitignore  README.md  pyproject.toml
data/: MILIVE_changes_2025-12-25_18-09-54.txt
data/.git_backup/: index
data/.git_backup/logs/: HEAD
data/.git_backup/logs/refs/heads/: master
data/.git_backup/refs/heads/: master
data/MILIVE/: SBO_SP_POSTTRANSACTIONNOTICE.sql  SBO_SP_TRANSACTIONNOTIFICATION.sql
data/MSPL/: SBO_SP_POSTTRANSACTIONNOTICE.sql  SBO_SP_TRANSACTIONNOTIFICATION.sql
data/ZZZ_TMILLP_05_12_25/: SBO_SP_TRANSACTIONNOTIFICATION.sql
data/changes/: .notifier_state.json
src/: main.py
src/config/: logger.py  settings.py
src/core/: git_manager.py  hana_client.py  notifier.py  orchestrator.py  util.py
src/tests/: test_config.py  test_email_notification.py  test_hana_client.py  test_main_cli.py  test_notifier.py  test_orchestrator_workflow.py
